styles/main.css
body, html
{
	height: 100%;
}

body
{
	color: white;
	/* background-color: rgb(249,229,192); */
	background: rgb(10,22,48);
	/* background: linear-gradient(rgb(10,22,48) 33%, rgb(68, 41, 83) 100%); */
	/* background: rgb(239,235,224);
	background: radial-gradient(circle, #F1D4B4 0%, #334B4D 100%); */
	overflow: hidden; /* Hide scrollbars */
	overscroll-behavior-y: contain !important; /* https://stackoverflow.com/questions/24081699/why-onbeforeunload-event-is-not-firing */
}

#messageBox
{
	position: absolute;
	/* top: max(40%, 300px); */
	top: 40vh;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 95%;
	padding: 20px;
	font-family: "Roboto Slab", sans-serif;
	color: white;
	text-align: center;
}

#messageBox p
{
	margin: 0.2em;
	font-size: min(2vh, 100%);
}

#messageBox h1
{
	font-size: min(6vh, 350%);
	font-weight: bold;
	margin: 0;
}
#messageBox h2
{
	/* font-size: 140%; */
	font-size: min(3vh, 140%);
	font-weight: normal;
	margin: 0;
}

#title
{
	margin-bottom: 5vh;
}

#messageBox button
{
	margin-top: 5vh;
	margin-bottom: 1.4em;
	padding: 0.2em 1em 0.2em 1em;
	width: 200px;
	height: 70px;
	font-family: Nunito, sans-serif;
	font-size: 200%;
	font-weight: bold;
	color: rgb(119, 114, 100);
	border-radius: 20px;
	border: none;
}

#messageBox button:enabled
{
	animation: animPulseButton 3s ease infinite;
}
@keyframes animPulseButton
{
	0% { box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.7); }
	50%, 100% { box-shadow: 0 0 0 20px rgba(255, 255, 255, 0); }
}

#messageBox #noScript
{
	width: 300px;
	margin: auto;
	margin-top: 1.4em;
	padding: 10px;
	font-family: "Roboto Slab", sans-serif;
	text-align: center;
	color: black;
	background-color: darkorange;
	border: 1px solid black;
}

#loadingText, #playText
{
	position: relative; 
	font-size: 100%;
	font-family: "Roboto Slab", sans-serif;
	text-align: center;
	color: rgb(10,22,48);
}

#loadingText
{
	top: -50px;
}

/* https://www.w3schools.com/howto/howto_css_loader.asp */
#loadingSpinner
{
	position: relative;
	margin: auto;
	border: 11px solid rgba(255, 255, 255, 0.3);
	border-top: 11px solid white;
	border-right: 11px solid white;
	border-radius: 50%;
	width: 35px;
	height: 35px;
	animation: loadingSpin 2s linear infinite;
}
@keyframes loadingSpin
{
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

#note2
{
	width: min(500px, 80%);
	max-height: 35%;

	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, 80px);

	background-color: white;
	border-radius: 10px;
	padding: 10px;

	color: black;
	font-family: Caveat, serif;
	font-size: 22px;

	pointer-events: none;
}

/* #note2:before /* https://codepen.io/run-time/pen/VNRBJd */
/* {
	content: "";
	position: absolute;
	border-left: 30px solid white;
	border-right: 30px solid transparent;
	border-bottom: 30px solid white;
	border-top: 30px solid transparent;
	left: 60%;
	top: -48px;
} */

#log, #pos
{
	color: white;
	background-color: black;
	position: absolute;
	font-family: Consolas;
}
#pos
{
	bottom: 10px;
}

#disclaimer
{
	position: absolute;
	width: 100%;
	font-family: sans-serif;
	font-weight: bold;
	font-size: 120%;
	color: red;
	text-align: center;
	pointer-events: none;
	padding-top: 0.5em;
}

.fullScreen
{
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
}



.animateFadeIn
{
	opacity: 0;
	animation-name: animateFadeIn;
	animation-delay: 1.5s; 
	animation-duration: 1s;
	animation-iteration-count: 1;
	animation-timing-function: ease;
	animation-fill-mode: forwards;
}
@keyframes animateFadeIn {
    0% {
        opacity: 0;
    }
	
    100% {
        opacity: 1;
    }
}

.animateFadeOut
{
	opacity: 1;
	animation-name: animateFadeOut;
	animation-duration: 0.2s;
	animation-iteration-count: 1;
	animation-timing-function: ease;
	animation-fill-mode: forwards;
}
@keyframes animateFadeOut {
    0% {
        opacity: 1;
    }
	
    100% {
        opacity: 0;
    }
}

